test-udemy-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: app-space
spec:
  type: LoadBalancer
  selector:
    app: ingress-wear-watch
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30008
